# qntools_macros

./: CMakeLists.txt  README.md
batch/: run_lambda.sh  run_proton.sh  run_slurm.sh
centrality/: CorrRunId.root
efficiency/: efficiency.2022.01.10.root  efficiency.2022.01.18.root  efficiency.2022.01.24.root  efficiency.2022.01.25.root  efficiency.2022.01.31.root  efficiency.2022.02.12.root  efficiency.2022.02.13.root  efficiency.2024.04.03.root  efficiency.2026.04.16.root  efficiency.2026.06.22.root  efficiency_xyz.2026.07.06.root  efficiency_xyz.2026.07.10.root  lambda_efficiency.root  proton_efficiency.root
identification/: PidFunctions.root  pars400_25.04.root  pars700_25.04.root
macro/: calculate_cn_sn.cc  correlate.cc  correlate.сс  example.cc  fhcal54_correct.cc  fhcal65_correct.cc  jam_proton_correct.cc  jam_proton_correlate.cc  labda_correlate.cc  lambda_correct.cc  lambda_correlate.cc  mcini_proton_correct.cc  mcini_proton_correlate.cc  mcpico_collider_correct.cc  mcpico_collider_correlate.cc  mcpico_correct.cc  mcpico_correlate.cc  mcpico_forward_correct.cc  mcpico_forward_correlate.cc  mpd_fixed_targer_correct.cc  mpd_fixed_target_correct.cc  mpd_fixed_target_correlate.cc  proton_correct.cc  proton_correlate.cc  run8_deuteron_correct_clean_c.cc  run8_deuteron_correct_tof.cc  run8_deuteron_correlate.cc  run8_dueteron_correct_m2.cc  run8_pi_neg_correct_clean.cc  run8_pi_neg_correlate_clean.cc  run8_proton_correct.cc  run8_proton_correct_R1.cc  run8_proton_correct_chi2.cc  run8_proton_correct_clean.cc  run8_proton_correct_dca.cc  run8_proton_correct_nhits.cc  run8_proton_correct_nonflow.cc  run8_proton_correct_pid.cc  run8_proton_correct_quaters.cc  run8_proton_correct_runid.cc  (+17 more)
macro/proton_v2/: mc_calculate_cn_sn.cc  mc_tw_rec_cn_sn.cc  run8_mc_proton_correct.cc  run8_mc_proton_correlate.cc  run8_mc_proton_decompose.cc  run8_mc_proton_recenter.cc  run8_mc_proton_twist_rescale.cc  run8_mc_proton_whitening.cc  run8_proton_correct.cc  run8_proton_correct_pid.cc  run8_proton_correlate.cc  run8_proton_decompose.cc
src/: CorrectionLinkDef.h  correct.cc  correction_task.cc  correction_task.h  correlate.cc.in  decompose.cc  decompose.cc.in  makeQvectors.C  makeQvectors.h  matrix.h  t_file_ptr.cc  t_file_ptr.h  utils.h  variable_manager.cc  variable_manager.h  vector_config.cc  vector_config.h
